Version History

  ' ' 2.1.5 -- ' '
  
        * Italian translation merged
          (https://weblion.psu.edu/trac/weblion/ticket/1266).
          [cah190 (Craig Haynal)]

  ' ' 2.1.4 -- ' '
  
        * Owner role should be able to edit Persons in Hidden state. 
          [ems174 (Eric Steele)]

        * Portuguese translation merged.
          [cah190 (Craig Haynal)]

        * Allow archetypes.schemaextender 2.x (now includes schema caching).
          [cah190 (Craig Haynal)]

  ' ' 2.1.3 -- ' '
        
        * Fixed the overzealous user search
          (https://weblion.psu.edu/trac/weblion/ticket/842)
          [ems174 (Eric Steele)]
        
        * Revised workflow for Persons. Visibility and membership behavior can
          now be controlled independently.
          [cah190 (Craig Haynal)]
        
        * Fixed an umlaut crash
          (https://weblion.psu.edu/trac/weblion/ticket/1212).
          [ems174 (Eric Steele)]
        
        * Fixed some ReferenceBrowserWidget behavior when running behind a web
          server (https://weblion.psu.edu/trac/weblion/ticket/1222).
          [cah190 (Craig Haynal)]
        
        * Added Turkish translation
          (https://weblion.psu.edu/trac/weblion/ticket/1252).
          [uyar]
        
        * Brought translation infrastructure up to date
          (https://weblion.psu.edu/trac/weblion/ticket/1482).
          [ewr119 (Erik Rose)]
        
        * Corrected the permission needed to manage personnel
          (https://weblion.psu.edu/trac/weblion/ticket/1464).
          [netropic]
        
        * Described the permissions implementations of the Personal
          Assistant(s) field (https://weblion.psu.edu/trac/weblion/ticket/1346).
          [ewr119 (Erik Rose)]
        
        * Wrapped example extender in egg packaging and renamed it.
          [ewr119 (Erik Rose)]
        
        * Fixed syntax error in the French translation.
          [ewr119 (Erik Rose)]
        